--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <title>Movie Finder</title>
   <link rel="stylesheet" href="style.css" />
 
-  
+  <!-- Bootstrap CSS -->
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+>
 </head>
 <body>
   <header class="site-header">
@@ -46,5 +50,11 @@
 
   <!-- We’ll create this file next -->
   <script src="script.js" defer></script>
+
+  <!-- Bootstrap JS -->
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+></script>
+
 </body>
 </html>
